--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,14 +1,38 @@
 name: Windows
+
 on:
   push:
-      branches: [ "master" ]
-  pull_request:
-      branches: [ "master" ]
+    branches: [ 3d-sequencer-remerge ]
+  schedule:
+    - cron: 0 0 * * 1
+  # pull_request:
+  #   branches: [ master ]
+  workflow_dispatch:
 
+permissions: {}
 jobs:
   build:
-    uses: ./.github/workflows/nightly-build.yml
-    with:
-      os: "windows-latest"
-      c_compiler: "cl"
-      cpp_compiler: "cl"
+
+    runs-on: windows-latest
+
+    steps:
+    - name: make
+      shell: cmd
+      run: |
+        mkdir C:/Users/runneradmin/bforartistsrepo
+        cd C:/Users/runneradmin/bforartistsrepo
+        git clone -b 3d-sequencer-remerge https://github.com/zNightlord/Bforartists
+        cd Bforartists
+        python ./build_files/utils/make_update.py
+        make
+        dir
+        cd ..
+        dir
+    - name: Upload Build
+      uses: actions/upload-artifact@v4
+      with:
+        name: Bforartists-Release-${{ runner.os }}
+        path: | 
+          C:/Users/runneradmin/bforartistsrepo/*_windows_x64_vc17_Release/bin
+          D:/a/Bforartists/Bforartists/*_windows*_x64_vc17*/bin
+                
