--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,7 +30,7 @@ jobs:
       # Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       shell: cmd
       run: |
-        make
+        make lite
     - name: Directory
       shell: cmd
       run: |
